Innovative Flix/force-app/main/default/objects/Season__c/Season__c.object-meta.xml
<CustomObject>
    <label>Season</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seasons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>