Innovative Flix/force-app/main/default/objects/Season__c/fields/Tv_Serie__c.field-meta.xml
<CustomField>
    <fullName>Tv_Serie__c</fullName>
    <label>Tv Serie</label>
    <referenceTo>Tv_Serie__c</referenceTo>
    <relationshipLabel>Seasons</relationshipLabel>
    <relationshipName>Seasons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>