Innovative Flix/force-app/main/default/objects/Season__c/fields/Tv_Serie_Title__c.field-meta.xml
<CustomField>
    <fullName>Tv_Serie_Title__c</fullName>
    <formula>Tv_Serie__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tv Serie Title</label>
    <type>Text</type>
</CustomField>