Innovative Flix/force-app/main/default/objects/Season__c/validationRules/Number_Of_Season_Greather_Than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_Of_Season_Greather_Than_0</fullName>
    <active>true</active>
    <errorConditionFormula>Number__c &gt;0</errorConditionFormula>
    <errorDisplayField>Number__c</errorDisplayField>
    <errorMessage>Number of season must be greather than 0</errorMessage>
</ValidationRule>