Innovative Flix/force-app/main/default/objects/Season__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Number__c</columns>
    <columns>Tv_Serie_Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>